--- a/themes/RIBBA/layouts/_default/baseof.html
+++ b/themes/RIBBA/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
     {{- partial "footer.html" . -}}
     <script src="../../static/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../../static/js/plugins.js"></script>
+    <script src="../../static/js/main.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.6.0/build/styles/default.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.6.0/build/highlight.min.js"></script>
 
